# ChangeLog for net-p2p/qbittorrent
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.5 2007/04/13 13:57:42 armin76 Exp $

*qbittorrent-0.9.2 (13 Apr 2007)

  13 Apr 2007; Raúl Porcel <armin76@gentoo.org> -qbittorrent-0.9.1.ebuild,
  +qbittorrent-0.9.2.ebuild:
  Version bump, drop old

*qbittorrent-0.9.1 (04 Apr 2007)

  04 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  -files/0.9.0-libtorrent-includepatch.patch, -qbittorrent-0.9.0.ebuild,
  +qbittorrent-0.9.1.ebuild:
  Version bump, upstream fixed the issue wrt the configure script

*qbittorrent-0.9.0 (03 Apr 2007)

  03 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  +files/0.9.0-libtorrent-includepatch.patch, +qbittorrent-0.9.0.ebuild:
  Version bump

  13 Feb 2007; Raúl Porcel <armin76@gentoo.org> qbittorrent-0.8.0.ebuild:
  x86 stable

*qbittorrent-0.8.0 (08 Jan 2007)

  08 Jan 2007; Raúl Porcel (armin76) <armin76@gentoo.org>
  +qbittorrent-0.8.0.ebuild:
  New ebuild for bug 148696
