@@ -1,17 +1,17 @@
 DIST qbittorrent-0.8.0.tar.gz 727017 RMD160 ca60963475ea768b9c5724e187ee0c5d4a1cb950 SHA1 226764fd92e43291b91e88666c832ba4d5af3a14 SHA256 3ff1406dae52b7831aa50550000221bd75a6aa86dc5817176a14322e46f24057
 DIST qbittorrent-0.9.2.tar.gz 833382 RMD160 30c689d3c47701336f7110165757102d6262ce09 SHA1 5ea4d133d0275c7db84e9ed77ffaded4bbd9c540 SHA256 d200e03558fb8aff586bfb98fb8c59e4984e700ac3c5a4d26791e04fbe18153a
-EBUILD qbittorrent-0.8.0.ebuild 1121 RMD160 5385cced0c89a5dcfa877369ca09ac186a5ef051 SHA1 a8c39467dbb20b935c668cf26d8b59fc7b392b09 SHA256 9b92ca1a1f6aa4983a350d49acfbb8f718ab1f527fb126810bbb7d32ffa98f3d
-MD5 4499c902b92bd8f2e09ebd7d393bc620 qbittorrent-0.8.0.ebuild 1121
-RMD160 5385cced0c89a5dcfa877369ca09ac186a5ef051 qbittorrent-0.8.0.ebuild 1121
-SHA256 9b92ca1a1f6aa4983a350d49acfbb8f718ab1f527fb126810bbb7d32ffa98f3d qbittorrent-0.8.0.ebuild 1121
-EBUILD qbittorrent-0.9.2.ebuild 1184 RMD160 e10a8dcaf971ab71b70741d15617cd90c718c14e SHA1 ce3dc4d1f40336163d2b1a3592ceb7d258dfd04e SHA256 51ccb01247883110c8a8b3f0065d881ea9fa615b816c72cc6c372f1d05a0745a
-MD5 e7f7ec24efa3317a840444b3f9564f8d qbittorrent-0.9.2.ebuild 1184
-RMD160 e10a8dcaf971ab71b70741d15617cd90c718c14e qbittorrent-0.9.2.ebuild 1184
-SHA256 51ccb01247883110c8a8b3f0065d881ea9fa615b816c72cc6c372f1d05a0745a qbittorrent-0.9.2.ebuild 1184
-MISC ChangeLog 1041 RMD160 992e5db95b3e9fa24c11aecfd63e6a6c3e1b8d46 SHA1 345ee26a3d4f66ca19b2b482531c498897b812ce SHA256 7df6408983bce7639f1b9de707f5aa7470022380f7b8a7c6813e4529bd4323a4
-MD5 ee17796cc0b990093eac39650f518548 ChangeLog 1041
-RMD160 992e5db95b3e9fa24c11aecfd63e6a6c3e1b8d46 ChangeLog 1041
-SHA256 7df6408983bce7639f1b9de707f5aa7470022380f7b8a7c6813e4529bd4323a4 ChangeLog 1041
+EBUILD qbittorrent-0.8.0.ebuild 1114 RMD160 6940e779f61bd26a414d1d07c3c2d4521d0b5741 SHA1 1014f0d76aa855ed4224e6610e041fa92b16ebf5 SHA256 6322e2f6fbc45e0ff4a588b28c300b5f419691e0f7765f711a769d17c3ae55f2
+MD5 2b3bc56262045e40b57e8717717857d7 qbittorrent-0.8.0.ebuild 1114
+RMD160 6940e779f61bd26a414d1d07c3c2d4521d0b5741 qbittorrent-0.8.0.ebuild 1114
+SHA256 6322e2f6fbc45e0ff4a588b28c300b5f419691e0f7765f711a769d17c3ae55f2 qbittorrent-0.8.0.ebuild 1114
+EBUILD qbittorrent-0.9.2.ebuild 1150 RMD160 9b3aff6ff76b82a90e12de60d2af6b518944d21c SHA1 6a2c81e90ae9cc5400bbb883168c863b05dfb96e SHA256 c76ef53153904bfbce615aef23d1e5b4a18875dd7d1ac6cf5393ed694c4f9fd1
+MD5 6cbf820514b52c3cd7ba1eff28b9fd6c qbittorrent-0.9.2.ebuild 1150
+RMD160 9b3aff6ff76b82a90e12de60d2af6b518944d21c qbittorrent-0.9.2.ebuild 1150
+SHA256 c76ef53153904bfbce615aef23d1e5b4a18875dd7d1ac6cf5393ed694c4f9fd1 qbittorrent-0.9.2.ebuild 1150
+MISC ChangeLog 1201 RMD160 327756506325b64213c2e428f31d84a1467ab64e SHA1 7e22ec1bc0801ead94f68cbc0bdf6fc206f6ac9f SHA256 6a1157d88e6b41377fadc0956c74aee2852553449b3ce316bdb4a9f76ad1d00c
+MD5 b22840c9ff394b0bcc4786c36f5d9994 ChangeLog 1201
+RMD160 327756506325b64213c2e428f31d84a1467ab64e ChangeLog 1201
+SHA256 6a1157d88e6b41377fadc0956c74aee2852553449b3ce316bdb4a9f76ad1d00c ChangeLog 1201
 MISC metadata.xml 222 RMD160 0dc4b04f31dcc89402f87c352327fe327b3cf31f SHA1 540337d5841f15b43186e5858f9e24032567de08 SHA256 713b9d1548682d5c1c3686a7b0711acf065a8fa4f386883ace90359d3dceb966
 MD5 5d4724517f1e88f93621f26ca38ec719 metadata.xml 222
 RMD160 0dc4b04f31dcc89402f87c352327fe327b3cf31f metadata.xml 222
