@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/qbittorrent/Attic/qbittorrent-0.8.0.ebuild,v 1.2 2007/02/13 20:52:04 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/qbittorrent/Attic/qbittorrent-0.8.0.ebuild,v 1.3 2007/04/20 15:09:49 armin76 Exp $
 
 inherit eutils qt4
 
@@ -21,7 +21,8 @@ DEPEND=">=net-libs/rb_libtorrent-0.11
 RDEPEND="${DEPEND}"
 
 pkg_setup() {
-	if ! built_with_use "dev-libs/boost" threads && ! built_with_use "dev-libs/boost" threadsonly; then
+	if has_version "<dev-libs/boost-1.34" && \
+		! built_with_use "dev-libs/boost" threads; then
 		eerror "dev-libs/boost has to be built with threads or threadsonly USE-flag."
 		die "Missing threads/threadsonly USE-flag for dev-libs/boost"
 	fi
