@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/qbittorrent
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.5 2007/04/13 13:57:42 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.6 2007/04/20 15:09:49 armin76 Exp $
+
+  20 Apr 2007; Raúl Porcel <armin76@gentoo.org> qbittorrent-0.8.0.ebuild,
+  qbittorrent-0.9.2.ebuild:
+  Fix threads USE-flag check if boost >1.33, bug 174714
 
 *qbittorrent-0.9.2 (13 Apr 2007)
 
